--- a/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
+++ b/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
@@ -46,7 +46,7 @@
     "r, t = cart_to_polar(x, y)\n",
     "aperture = circle(1, r)\n",
     "inc_psf = abs(focus(aperture, Q=2)) ** 2\n",
-    "inc_psf.sum(), inc_psf.max()"
+    "print('sum', inc_psf.sum(), 'max', inc_psf.max())"
    ]
   },
   {
@@ -54,7 +54,7 @@
    "id": "color-state",
    "metadata": {},
    "source": [
-    "The `focus` function is an FFT propagation, and uses the `norm='unitary'` scaling, which preserves Parseval's theorem.  The satisfaction is in terms of complex E-field, but we are interested in unit intensity, so we must also divide by the square root of the sum of the aperture if we'd like the result to peak at 1.0:"
+    "The `focus` function is an FFT propagation, and uses the `norm='unitary'` scaling, which preserves Parseval's theorem.  The satisfaction is in terms of complex E-field, but we are interested in unit intensity, so we must also divide by the square root of the sum of the aperture if we'd like the result to sum to 1.0:"
    ]
   },
   {
@@ -66,7 +66,7 @@
    "source": [
     "aperture2 = aperture / np.sqrt(aperture.sum())\n",
     "inc_psf = abs(focus(aperture2, Q=2)) ** 2\n",
-    "inc_psf.sum(), inc_psf.max()"
+    "print('sum', inc_psf.sum(), 'max', inc_psf.max())"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "id": "nasty-casting",
    "metadata": {},
    "source": [
-    "To achieve a peak of one, we need to scale the aperture in a particular way:"
+    "The normalization uses a square root because it is done in terms of complex E-field or energy, and Parseval's theorem preserves the total power or intensity in the signal.  To achieve a peak of one, we need to scale the aperture in a particular way:"
    ]
   },
   {
@@ -84,10 +84,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "aperture3 = pad2d(aperture, Q=2)\n",
-    "aperture3 = aperture3 * (2*np.sqrt(aperture.size)/aperture.sum())\n",
+    "padfactor = 2\n",
+    "aperture3 = pad2d(aperture, Q=padfactor)\n",
+    "aperture3 = aperture3 * np.sqrt(aperture3.size)/aperture.sum()\n",
     "inc_psf = abs(focus(aperture3, Q=1)) ** 2\n",
-    "inc_psf.sum(), inc_psf.max()"
+    "print('sum', inc_psf.sum(), 'max', inc_psf.max())"
    ]
   },
   {
@@ -95,6 +96,8 @@
    "id": "beb139d6",
    "metadata": {},
    "source": [
+    "In this version, we have modified the normalization to increase the power in the aperture by the total number of samples, once again using a square root for energy instead of power.  This is a \"Stehl\" normalization, and the Strehl would be directly evaluate-able using the DC bin of the incoherent PSF if aberrations were introduced.\n",
+    "\n",
     "Use of matrix DFTs (and chirp Z transforms) provides equal energy to FFTs, except when performing asymmetric transform pairs (one domain is smaller or larger than the other):"
    ]
   },
@@ -109,11 +112,11 @@
     "# note, mdft.dft2 is used for the sake of clear example, but propagation.focus_fixed_sampling\n",
     "# is just a different interface to this\n",
     "inc_psf = abs(focus(aperture2, Q=2)) ** 2\n",
-    "print(inc_psf.sum(), inc_psf.max())\n",
+    "print('FFT sum', inc_psf.sum(), 'max', inc_psf.max())\n",
     "\n",
     "inc_psf2 = mdft.dft2(aperture2, 2, 512)\n",
     "inc_psf2 = abs(inc_psf2)**2\n",
-    "print(inc_psf2.sum(), inc_psf2.max())"
+    "print('MFT sum', inc_psf.sum(), 'max', inc_psf.max())"
    ]
   },
   {
@@ -141,7 +144,7 @@
    "id": "27939d75",
    "metadata": {},
    "source": [
-    "In this case, we lost about 0.03/5 ~= 0.6% of the energy.  If we go back to the pupil, a factor of 2 scaling will be needed due to the 2X crop used in the focal plane; 128 = 0.5 * 256, or 256 = 128 * 2"
+    "In this case, we lost about 0.03/5 ~= 0.6% of the energy.  This will hold true in the pupil-plane representation if we go back, because each matrix DFT preserves Parseval's theorem:"
    ]
   },
   {
@@ -153,29 +156,14 @@
    "source": [
     "field = mdft.dft2(aperture2, 2, 128)  # note that we are propagating the e field back to the pupil, not the PSF\n",
     "aperture_clone = mdft.idft2(field, 4, 256)\n",
-    "aperture_clone = aperture_clone.real * 2\n",
-    "plt.imshow(aperture_clone)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d17aa1ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.imshow(aperture2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1c0aade5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(aperture2.max(), aperture2.sum())\n",
-    "print(aperture_clone.max(), aperture_clone.sum())"
+    "aperture_clone = aperture_clone.real\n",
+    "\n",
+    "fig, axs = plt.subplots(ncols=2)\n",
+    "axs[0].imshow(aperture2)\n",
+    "axs[0].set(title=f'True Aperture\\nsum: {aperture2.sum():.1f}')\n",
+    "\n",
+    "axs[1].imshow(aperture_clone)\n",
+    "axs[1].set(title=f'After Matrix DFT and iDFT\\nsum: {aperture_clone.sum():.1f}')"
    ]
   },
   {
@@ -183,7 +171,7 @@
    "id": "42576ca1",
    "metadata": {},
    "source": [
-    "We can see that at first blush, the process does not duplicate itself.  This is because of the IIR nature of the PSF.  The destruction of high frequencies via the crop implicit in computing a $Q=2$ field with $< 2*N$ samples results in spatial domain ringing.  This ringing has resulted in the pupil being 0.0003 dimmer in its total energy, likely due to a small amount of energy cast outside the computational window.  There is also a ~10% overshoot in the maximum value.\n",
+    "We can see that at first blush, the process does not duplicate itself.  This is because of the infinite impulse response nature of the PSF.  The destruction of high frequencies via the crop implicit in computing a $Q=2$ field with $< 2*N$ samples results in spatial domain ringing.  This ringing has resulted in the pupil being minutely dimmer in its total energy, due to the energy that was outside the computed window.  There is also a ~10% overshoot in the maximum value.\n",
     "\n",
     "A related phenomenon will occur if you compute a domain that goes beyond $f_s/2$, since the Dirichlet aliases will be visible in the `field` variable before inverse transformation, and the Fourier transform of a signal and a noninteger number of its aliases is not the same as the Fourier transform of the signal itself.\n",
     "\n",
@@ -191,14 +179,14 @@
     "\n",
     "prysm's propagations are normalized such that,\n",
     "\n",
-    "1.  If you desire a sum of 1, scale $f = f / \\sqrt{\\sum f}$\n",
-    "2.  If you desire a peak of one, scale $f = f \\cdot \\left( Q\\cdot \\sqrt{\\frac{N}{\\sum f}} \\right)$"
+    "1.  If you desire a sum of 1, scale $f = f \\cdot \\left(1 / \\sqrt{\\sum f}\\right)$\n",
+    "2.  If you desire a peak of one, scale $f = f \\cdot \\left( \\sqrt{\\text{array size}} / \\sqrt{\\sum f} \\right)$"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.12 ('prysm')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -212,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
