--- a/docs/source/releases/v1.0.rst
+++ b/docs/source/releases/v1.0.rst
@@ -160,8 +160,9 @@ Activation functions and discretizers:
 
 Cost or loss functions:
 
-* :func:`~prysm.x.optym.cost.BiasAndGainInvariantError`
-* :func:`~prysm.x.optym.cost.LogLikelyhood`
+* :func:`~prysm.x.optym.cost.mean_square_error`
+* :func:`~prysm.x.optym.cost.bias_and_gain_invariant_error`
+* :func:`~prysm.x.optym.cost.negative_loglikelihood`
 
 Optimizers:
 
