first round of updates for PR, waiting on feedback for apply_polarization_to_field function

--- a/docs/source/how-tos/polarized_propagation.ipynb
+++ b/docs/source/how-tos/polarized_propagation.ipynb
@@ -75,7 +75,9 @@
     "from prysm.x.polarization import vector_vortex_retarder\n",
     "\n",
     "# Generate the VVR, a spatially-varying half-wave plate\n",
-    "vvr = vector_vortex_retarder(2,256,retardance=np.pi)\n",
+    "x, y = make_xy_grid(256, diameter=1)\n",
+    "r, t = cart_to_polar(x, y)\n",
+    "vvr = vector_vortex_retarder(2,t,retardance=np.pi)\n",
     "plot_jones_matrix(np.real(vvr),title='Vortex Retarder')"
    ]
   },
