--- a/docs/source/how-tos/polarized_propagation.ipynb
+++ b/docs/source/how-tos/polarized_propagation.ipynb
@@ -132,7 +132,7 @@
    "source": [
     "from prysm.propagation import focus_fixed_sampling\n",
     "from prysm.geometry import circle\n",
-    "from prysm.x.polarization import apply_polarization_to_field\n",
+    "from prysm.x.polarization import apply_polarization_optic\n",
     "\n",
     "def propagate(wf):\n",
     "    wfout = focus_fixed_sampling(wf,\n",
@@ -151,8 +151,8 @@
     "a_ref = propagate(A)\n",
     "\n",
     "#  multiply A by the polarizing element\n",
-    "A = apply_polarization_to_field(A) \n",
-    "j_out = propagate(vvr*A)"
+    "A = apply_polarization_optic(A, vvr) \n",
+    "j_out = propagate(A)"
    ]
   },
   {
