--- a/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
+++ b/docs/source/how-tos/Radiometrically-Correct-Modeling.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "inclusive-coral",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
    "id": "color-state",
    "metadata": {},
    "source": [
-    "The `focus` function is an FFT propagation, and uses the `norm='unitary'` scaling, which preserves Parseval's theorem.  The satisfaction is in terms of complex E-field, but we are interested in unit intensity, so we must also divide by the square root of the sum of the aperture if we'd like the result to sum to 1.0:"
+    "The `focus` function is an FFT propagation, and uses the `norm='ortho'` scaling, which preserves Parseval's theorem.  The satisfaction is in terms of complex E-field, but we are interested in unit intensity, so we must also divide by the square root of the sum of the aperture if we'd like the result to sum to 1.0.  This is equivalent to scaling the aperture to represent one photon in total intensity:"
    ]
   },
   {
@@ -74,7 +74,7 @@
    "id": "nasty-casting",
    "metadata": {},
    "source": [
-    "The normalization uses a square root because it is done in terms of complex E-field or energy, and Parseval's theorem preserves the total power or intensity in the signal.  To achieve a peak of one, we need to scale the aperture in a particular way:"
+    "To achieve a peak of one, we need to be aware of the internal normalization done by the `norm=ortho` convention used by prysm's FFTs.  That convention includes an inner division by $\\sqrt{N\\,}$, where N is the number of elements in the array.  Since we desire a peak of 1, we can use Parseval's theorem and simply divide the output array by the sum of the aperture (i.e., the sum of the power in the input beam).  Combine that with undoing the normalization done internally by multiplying by $\\sqrt{N\\,}$: "
    ]
   },
   {
@@ -124,7 +124,7 @@
    "id": "15c16dab",
    "metadata": {},
    "source": [
-    "Note that these agree to all but the last two digits.  We can see that if we \"crop\" into the zoomed DFT by computing fewer samples, our peak answer does not change and the sum is nearly the same (since the region of the PSF distant to the core carries very little energy):"
+    "Note that these agree to all digits.  We can see that if we \"crop\" into the zoomed DFT by computing fewer samples, our peak answer does not change and the sum is nearly the same (since the region of the PSF distant to the core carries very little energy):"
    ]
   },
   {
@@ -144,7 +144,7 @@
    "id": "27939d75",
    "metadata": {},
    "source": [
-    "In this case, we lost about 0.03/5 ~= 0.6% of the energy.  This will hold true in the pupil-plane representation if we go back, because each matrix DFT preserves Parseval's theorem:"
+    "In this case, we lost about 0.6% of the energy.  This will hold true in the pupil-plane representation if we go back, because each matrix DFT preserves Parseval's theorem:"
    ]
   },
   {
@@ -180,13 +180,13 @@
     "prysm's propagations are normalized such that,\n",
     "\n",
     "1.  If you desire a sum of 1, scale $f = f \\cdot \\left(1 / \\sqrt{\\sum f}\\right)$\n",
-    "2.  If you desire a peak of one, scale $f = f \\cdot \\left( \\sqrt{\\text{array size}} / \\sqrt{\\sum f} \\right)$"
+    "2.  If you desire a peak of one, scale $f = f \\cdot \\left( \\sqrt{\\text{array size}} /\\sum f \\right)$"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prysm",
    "language": "python",
    "name": "python3"
   },
@@ -200,12 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "5be6ce34c2868258f3cc626bd7cc451c1e001037b347cf86bc40933442f60bd7"
-   }
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
