docs: revise ins and outs of polynomials for improved clarity and new xy naming

--- a/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
+++ b/docs/source/explanation/Ins-and-Outs-of-Polynomials.ipynb
@@ -6,7 +6,34 @@
    "source": [
     "# Ins and Outs of Polynomials\n",
     "\n",
-    "This document serves as a reference for how prysm is set up to work with polynomials, in the context of OPD or surface figure error.  Much of what differentiates prysm's API in this area has to do with the fact that it [expects the grid to exist at the user level](./how-prysm-works.ipynb#Grids), but there are some deep and consequential implementation differences, too.  Before we get into those, we will create a working grid and a mask for visualization:"
+    "This document serves as a reference for how prysm is set up to work with polynomials, in the context of OPD or surface figure error.  Much of what differentiates prysm's API in this area has to do with the fact that it [expects the grid to exist at the user level](./how-prysm-works.ipynb#Grids), but there are some deep and consequential implementation differences, too.\n",
+    "\n",
+    "## Table of Contents\n",
+    "\n",
+    "### Bases:\n",
+    "\n",
+    "- [Hopkins](#Hopkins)\n",
+    "- [Zernike](#Zernike)\n",
+    "- [Jacobi](#Jacobi)\n",
+    "- [Chebyshev](#Chebyshev)\n",
+    "- [Legendre](#Legendre)\n",
+    "- [Dickson](#Dickson)\n",
+    "- [Qs](#Qs)\n",
+    "\n",
+    "Note that all polynomial types allow evaluation for arbitrary order.  First partial derivatives can be computed using the format `{polynomial}_der` or `{polynomial}_der_seq`.  1D polynomials are differentiated with respect to x.  2D polynomials are differentiated with respect to the coordiates they are defined over, e.g. rho, theta for Zernike and Q-type polynomials.  Differentiation is done analytically and does not rely on finite differences.\n",
+    "\n",
+    "### Fitting and Non-Circular Domains\n",
+    "\n",
+    "- [Fitting](#Fitting)\n",
+    "- [Annular Domains](#Annular-Domains)\n",
+    "- [Arbitrary Domains](#Arbitrary-Domains)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before getting into the various bases avaialble, we will create a working grid and a mask for visualization:"
    ]
   },
   {
@@ -31,26 +58,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Table of Contents\n",
-    "\n",
-    "### Bases:\n",
-    "\n",
-    "- [Hopkins](#Hopkins)\n",
-    "- [Zernike](#Zernike)\n",
-    "- [Jacobi](#Jacobi)\n",
-    "- [Chebyshev](#Chebyshev)\n",
-    "- [Legendre](#Legendre)\n",
-    "- [Dickson](#Dickson)\n",
-    "- [Qs](#Qs)\n",
-    "\n",
-    "Note that all polynomial types allow evaluation for arbitrary order.  First partial derivatives can be computed using the format `{polynomial}_der` or `{polynomial}_der_seq`.  1D polynomials are differentiated with respect to x.  2D polynomials are differentiated with respect to the coordiates they are defined over, e.g. rho, theta for Zernike and Q-type polynomials.  Differentiation is done analytically and does not rely on finite differences.\n",
-    "\n",
-    "### Fitting and Non-Circular Domains\n",
-    "\n",
-    "- [Fitting](#Fitting)\n",
-    "- [Annular Domains](#Annular-Domains)\n",
-    "- [Arbitrary Domains](#Arbitrary-Domains)\n",
-    "\n",
     "## Hopkins\n",
     "\n",
     "The simplest polynomials are Hopkins':\n",
@@ -157,7 +164,7 @@
     "\n",
     "In other words, for a given $m$, you can compute $R$ for $n=3$ from $R$ for $n=2$ and $n=1$, and so on until you reach the highest value of N.  Because the sum in the Rodrigues formulation is increasingly large as $n,m$ grow, it has worse than linear time complexity.  Because the recurrrence in Eq. (3) does not change as $n,m$ grow it _does_ have linear time complexity.\n",
     "\n",
-    "The use of this recurrence relation is hidden from the user in the `zernike_nm` function, and the recurrence relation is for a so-called auxiliary polynomial ($R$), so the Zernike polynomials themselves are not useful for this recurrence.  You _can_ make use of it by calling the `zernike_nm_seq` function, a naming that will become familiar by the end of this reference guide.  Consider the first 16 Fringe Zernikes:"
+    "The use of this recurrence relation is hidden from the user in the `zernike_nm` function, and the recurrence relation is for a so-called auxiliary polynomial ($R$), so the Zernike polynomials themselves are not useful for this recurrence.  You _can_ make use of it by calling the `zernike_nm_seq` function, a naming that will become familiar by the end of this reference guide.  Consider the first 36 Fringe Zernikes:"
    ]
   },
   {
@@ -442,19 +449,19 @@
    "source": [
     "## XY\n",
     "\n",
-    "XY polynomials are implemented in the same manner as Code V.  A monoindexing scheme that is identical to Code V (**beginning from j=2**) is provided:"
+    "XY polynomials are implemented in the same manner as Code V.  A monoindexing scheme that is identical to Code V (**beginning from j=2**) is provided.  An additional `j=1` term for piston (`x^0 * y^0`) is provided for easier use with the orthogonalization functions described later in this document:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from prysm.polynomials import (\n",
-    "    xy_polynomial,\n",
-    "    xy_polynomial_seq,\n",
-    "    j_to_xy\n",
+    "    xy,\n",
+    "    xy_seq,\n",
+    "    j_to_mn\n",
     ")"
    ]
   },
@@ -634,7 +641,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# whimsically rotated to show rarely used features\n",
     "hexap = regular_polygon(6, 1, x, y, rotation=0)\n",
     "im = plt.imshow(hexap, interpolation='bilinear')\n",
     "plt.colorbar(im)"
@@ -685,7 +691,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "prysm",
    "language": "python",
    "name": "python3"
   },
